// Copyright(c) 2017-2018 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

option go_package  = "github.com/lf-edge/eve/api/go/config";
option java_package = "org.lfedge.eve.config";

import "config/acipherinfo.proto";
import "config/devcommon.proto";
import "config/storage.proto";
import "config/vm.proto";
import "config/netconfig.proto";

message InstanceOpsCmd {
  uint32 counter = 2;
  string opsTime = 4;
}

message AppInstanceConfig {
  UUIDandVersion uuidandversion = 1;
  string displayname = 2;
  VmConfig fixedresources = 3;

  // VolumeRefs, if supported by EVE, will supercede drives. Drives still exist for backward compatibility.
  // drives will be deprecated in the future.
  repeated Drive drives = 4;
  bool activate = 5;

  // NetworkAdapter are virtual adapters assigned to the application
  // Physical adapters such as eth1 are part of Adapter
  repeated NetworkAdapter interfaces = 6;
  // adapters - Name in Adapter should be set to PhysicalIO.assigngrp
  repeated Adapter adapters = 7; // I/O adapters to assign to app

  // The device behavior for a restart command (if counter increased)
  // is to restart the application instance honoring the persist setting
  // for the disks/drives.
  // The device can assume that the adapters did not change.
  InstanceOpsCmd restart = 9;

  // The device behavior for a purge command is to restart the domU.
  // with the disks/drives recreated from the downloaded images
  // (whether preserve is set or not).
  //    if the manifest is changed with purge option, new manifest will
  //    be used. Device doesn't know what has changed, it will get the
  //    changed config.
  //
  //    if disks section have changed will be purged automatically.
  //    phase 1: we would purge all disks irrespective preserve flag
  InstanceOpsCmd purge = 10;

  // App Instance initialization configuration data provided by user
  // This will be used as "user-data" in cloud-init
  // Empty string will indicate that cloud-init is not required
  string userData = 11;

  // Config flag if the app-instance should be made accessible
  // through a remote console session established by the device.
  bool remoteConsole = 12;

  // contains the encrypted userdata
  CipherBlock cipherData = 13;

  // UUID of volumes to be attached to the app-instance.
  repeated string volumeRefs = 14;
}
